--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,21 @@
   padding: 0;
 }
 
+body{
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+body::-webkit-scrollbar {
+  display: none;
+}
+
 a{
   text-decoration: none;
 }
 
 #root{
-  width: 100vw;
+  width: 100%;
 }
 
 ul > li {
@@ -21,3 +30,5 @@ ul > li {
         font-size: 18px;
     }
 }
+
+
